# resume-agent

./: ARCHITECTURE.md  pyproject.toml
app/: main.py
app/agents/: generator.py  matcher.py  workflow.py
app/api/: middleware.py
app/api/dependencies/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: application.py  health.py  job.py  resume.py
app/core/: __init__.py  config.py  database.py  embeddings.py  factory.py  logging.py  memory.py  utils.py
app/ingestion/: job_ingestor.py  resume_ingestor.py
app/models/: jobMatch.py  workflow.py
app/rag/: retriever.py
app/schemas/: application.py  base.py  job.py  resume.py
app/services/: application_service.py  base.py  job_service.py  resume.py
app/utils/: scheduler.py
