[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "groq>=0.37.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.0",
    "llama-index>=0.14.22",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.0",
    "uvicorn[standard]>=0.47.0",
]
